Fix cookie and properties